# polymail-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
src/: config.rs  email.rs  error.rs  fallback.rs  lib.rs  mailer.rs
src/provider/: lettermint.rs  mod.rs  postmark.rs  sendgrid.rs  smtp.rs
tests/: config.rs  smtp_integration.rs
