[package]
name = "polymail"
version = "0.1.6"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Unified email sending interface for multiple providers"
repository = "https://github.com/franzos/polymail-rs"
homepage = "https://github.com/franzos/polymail-rs"
documentation = "https://docs.rs/polymail"
keywords = ["email", "e-mail", "sendgrid", "postmark", "lettermint"]
categories = ["api-bindings", "email"]
exclude = ["manifest.scm"]

[features]
default = ["lettermint-reqwest-013"]
postmark = ["dep:postmark"]
# Lettermint provider. Enables the crate but no reqwest backend on its own; pick
# one of the two backend features below (or rely on `default`). Kept backend-less
# because this feature shares its name with the `lettermint` dependency, so it is
# auto-activated whenever the dep is pulled in.
lettermint = ["dep:lettermint"]
# Lettermint on reqwest 0.13 + rustls (the default backend).
lettermint-reqwest-013 = ["lettermint", "lettermint/reqwest-rustls"]
# Lettermint on reqwest 0.12 + rustls. Enable with default-features = false; the
# two backends are mutually exclusive (enabling both is a compile error).
lettermint-reqwest-012 = ["lettermint", "lettermint/reqwest-012-rustls"]
sendgrid = ["dep:sendgrid"]
smtp = ["dep:lettre", "dep:base64"]
# Deserializable `ProviderConfig` so apps can load their mail settings from
# TOML/env (via serde) and build a mailer without hand-writing the provider
# match. Only compiled-in providers appear as variants.
config = ["dep:serde"]

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1", features = ["derive"], optional = true }

postmark = { version = "2.0", features = ["reqwest-rustls-tls"], optional = true }
lettermint = { version = "0.3", default-features = false, optional = true }
sendgrid = { version = "0.27", optional = true }
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "builder",
    "smtp-transport",
    "pool",
], optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde_json = "1"
